@@ -201,8 +201,8 @@ public interface StructureMatcher
 			int matchEndLine = textArea.getScreenLineOfOffset(
 				match.end);
 
-			FontMetrics fm = textArea.getPainter().getFontMetrics();
-			int height = fm.getHeight();
+			int fontHeight = textArea.getPainter().getFontHeight();
+			y += textArea.getPainter().getLineExtraSpacing();
 
 			int[] offsets = getOffsets(screenLine,match);
 			int x1 = offsets[0];
@@ -210,8 +210,8 @@ public interface StructureMatcher
 
 			gfx.setColor(textArea.getPainter().getStructureHighlightColor());
 
-			gfx.drawLine(x1,y,x1,y + height - 1);
-			gfx.drawLine(x2,y,x2,y + height - 1);
+			gfx.drawLine(x1,y,x1,y + fontHeight - 1);
+			gfx.drawLine(x2,y,x2,y + fontHeight - 1);
 
 			if(matchStartLine == screenLine || screenLine == 0)
 				gfx.drawLine(x1,y,x2,y);
@@ -229,8 +229,8 @@ public interface StructureMatcher
 
 			if(matchEndLine == screenLine)
 			{
-				gfx.drawLine(x1,y + height - 1,
-					x2,y + height - 1);
+				gfx.drawLine(x1,y + fontHeight - 1,
+					     x2,y + fontHeight - 1);
 			}
 		}
 
